# ogre-stereoplugin

./: CMakeLists.txt  readme.md  readme.txt
include/: StereoManager.h  StereoPlugin.h
resources/: Stereoscopy.cg  Stereoscopy.compositor  Stereoscopy.material
src/: StereoManager.cpp  StereoPlugin.cpp  StereoPluginDll.cpp
